--- a/src/e_cidadania/apps/accounts/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/accounts/locale/es/LC_MESSAGES/django.po
@@ -2,20 +2,20 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+#
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-03-25 23:13+0100\n"
+"POT-Creation-Date: 2011-04-18 11:39+0200\n"
 "PO-Revision-Date: 2011-03-25 23:41\n"
 "Last-Translator: <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: \n"
 "X-Translated-Using: django-rosetta 0.5.6\n"
 
 #: models.py:33
@@ -111,8 +111,12 @@ msgid "Password:"
 msgstr "Contraseña:"
 
 #: templates/accounts/logout.html:7
-msgid "Thanks for using e-cidadania. Now you can continue visting the website or log in again."
-msgstr "Gracias por usar e-Ciudadanía. Ahora puedes seguir visitando la página web o conectarse de nuevo."
+msgid ""
+"Thanks for using e-cidadania. Now you can continue visting the website or "
+"log in again."
+msgstr ""
+"Gracias por usar e-Ciudadanía. Ahora puedes seguir visitando la página web o "
+"conectarse de nuevo."
 
 #: templates/accounts/logout.html:9
 msgid "Login again"
