--- a/src/e_cidadania/apps/swingtime/locale/es/LC_MESSAGES/django.po
+++ b/src/e_cidadania/apps/swingtime/locale/es/LC_MESSAGES/django.po
@@ -8,10 +8,11 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-02-17 11:15+0100\n"
+"POT-Creation-Date: 2011-04-18 11:41+0200\n"
 "PO-Revision-Date: 2011-02-15 10:03\n"
 "Last-Translator: <a@a.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
