--- a/src/apps/ecidadania/accounts/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/apps/ecidadania/accounts/locale/es_ES/LC_MESSAGES/django.po
@@ -1,22 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Oscar Carballal <oscar@cidadania.coop>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: e-cidadania\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-21 17:48+0200\n"
-"PO-Revision-Date: 2012-02-29 08:20+0000\n"
-"Last-Translator: Oscar Carballal <oscar@cidadania.coop>\n"
-"Language-Team: Spanish (Spain) (http://www.transifex.net/projects/p/"
-"ecidadania/language/es_ES/)\n"
-"Language: es_ES\n"
+"Report-Msgid-Bugs-To: http://code.ecidadania.org/\n"
+"POT-Creation-Date: 2012-05-24 10:12+0200\n"
+"PO-Revision-Date: 2012-05-24 08:16+0000\n"
+"Last-Translator: Oscar Carballal <oscar.carballal@cidadania.coop>\n"
+"Language-Team: Spanish (Spain) (http://www.transifex.net/projects/p/ecidadania/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: es_ES\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: models.py:35
@@ -86,12 +85,3 @@ msgstr "DNI"
 #: models.py:105
 msgid "Website"
 msgstr "Página web"
-
-#~ msgid "Province"
-#~ msgstr "Provincia"
-
-#~ msgid "Region"
-#~ msgstr "Región"
-
-#~ msgid "Neighborhood"
-#~ msgstr "Barrio"
