--- a/src/apps/ecidadania/debate/locale/gl_ES/LC_MESSAGES/django.po
+++ b/src/apps/ecidadania/debate/locale/gl_ES/LC_MESSAGES/django.po
@@ -1,22 +1,21 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
 # Oscar Carballal <oscar@cidadania.coop>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: e-cidadania\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-21 17:48+0200\n"
-"PO-Revision-Date: 2012-02-29 08:59+0000\n"
-"Last-Translator: Oscar Carballal <oscar@cidadania.coop>\n"
-"Language-Team: Galician (Spain) (http://www.transifex.net/projects/p/"
-"ecidadania/language/gl_ES/)\n"
-"Language: gl_ES\n"
+"Report-Msgid-Bugs-To: http://code.ecidadania.org/\n"
+"POT-Creation-Date: 2012-05-24 10:12+0200\n"
+"PO-Revision-Date: 2012-05-24 08:16+0000\n"
+"Last-Translator: Oscar Carballal <oscar.carballal@cidadania.coop>\n"
+"Language-Team: Galician (Spain) (http://www.transifex.net/projects/p/ecidadania/language/gl_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: gl_ES\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: models.py:42 models.py:107
@@ -61,24 +60,23 @@ msgstr "Hora da última modificación"
 
 #: urls.py:35
 msgid "^add/"
-msgstr ""
+msgstr "^add/"
 
 #: urls.py:37
 msgid "^update_position/"
-msgstr ""
+msgstr "^update_position/"
 
 #: urls.py:39
 msgid "^update_note/"
-msgstr ""
+msgstr "^update_note/"
 
 #: urls.py:41
 msgid "^create_note/"
-msgstr ""
+msgstr "^create_note/"
 
 #: urls.py:43
-#, fuzzy
 msgid "^delete_note/"
-msgstr "Editar nota"
+msgstr "^delete_note/"
 
 #: templates/debate/debate_add.html:4
 #: templates/debate/debate_add_simple.html:4
@@ -134,7 +132,6 @@ msgid "Debates in "
 msgstr "Debates en"
 
 #: templates/debate/debate_list.html:10
-#, fuzzy
 msgid "Debates in"
 msgstr "Debates en"
 
@@ -160,23 +157,22 @@ msgstr "seguinte"
 
 #: templates/debate/debate_outdated.html:4
 #: templates/debate/debate_outdated.html:16
-#, fuzzy
 msgid "Can't view this debate"
-msgstr "Crear novo debate"
+msgstr "Non pode ver este debate"
 
 #: templates/debate/debate_outdated.html:17
 msgid ""
 "It seems that the debate you're trying to access is either <strong>not "
 "started</strong> or it <strong>expired</strong>."
-msgstr ""
+msgstr "Pareceque o debate ao que tenta acceder ou <strong>non comezou</strong> ou <strong>caducou</strong>"
 
 #: templates/debate/debate_outdated.html:20
 msgid "Started on:"
-msgstr ""
+msgstr "Comezado o:"
 
 #: templates/debate/debate_outdated.html:23
 msgid "Finished on:"
-msgstr ""
+msgstr "Rematado o:"
 
 #: templates/debate/debate_view.html:5
 msgid "View debate"
@@ -191,28 +187,24 @@ msgid "Scope:"
 msgstr "Ámbito:"
 
 #: templates/debate/debate_view.html:27
-#, fuzzy
 msgid "Start date:"
-msgstr "Data de comezo"
+msgstr "Data de comezo:"
 
 #: templates/debate/debate_view.html:27 templates/debate/debate_view.html:28
-#, fuzzy
 msgid "No date"
-msgstr "Data de fin"
+msgstr "Sen data"
 
 #: templates/debate/debate_view.html:28
-#, fuzzy
 msgid "End date:"
-msgstr "Data de fin"
+msgstr "Data de remate:"
 
 #: templates/debate/debate_view.html:68
-#, fuzzy
 msgid "Delete note"
-msgstr "Editar nota"
+msgstr "Borrar unha nota"
 
 #: templates/debate/debate_view.html:72
 msgid "View"
-msgstr ""
+msgstr "Ver"
 
 #: templates/debate/debate_view.html:74
 msgid "Edit"
@@ -231,9 +223,5 @@ msgid "100 characters"
 msgstr "100 caracteres"
 
 #: templates/debate/debate_view.html:122
-#, fuzzy
 msgid "View note"
-msgstr "Ver debate"
-
-#~ msgid "Add phase"
-#~ msgstr "Engadir fase"
+msgstr "Ver a nota"
