--- a/src/apps/ecidadania/staticpages/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/apps/ecidadania/staticpages/locale/es_ES/LC_MESSAGES/django.po
@@ -1,25 +1,25 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
+# 
+# Translators:
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-21 17:48+0200\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"Project-Id-Version: e-cidadania\n"
+"Report-Msgid-Bugs-To: http://code.ecidadania.org/\n"
+"POT-Creation-Date: 2012-05-24 10:12+0200\n"
+"PO-Revision-Date: 2012-05-24 08:17+0000\n"
+"Last-Translator: Oscar Carballal <oscar.carballal@cidadania.coop>\n"
+"Language-Team: Spanish (Spain) (http://www.transifex.net/projects/p/ecidadania/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: es_ES\n"
+"Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: admin.py:38
 msgid "Description"
-msgstr ""
+msgstr "Descripción"
 
 #: admin.py:41
 msgid "Options"
@@ -47,7 +47,7 @@ msgstr ""
 
 #: models.py:36
 msgid "Last update"
-msgstr ""
+msgstr "Última actualización"
 
 #: models.py:37
 msgid "Order"
@@ -71,7 +71,7 @@ msgstr ""
 
 #: templates/staticpages/staticpages_index.html:13
 msgid "Go back"
-msgstr ""
+msgstr "Volver"
 
 #: templates/staticpages/staticpages_index.html:16
 msgid "last updated"
