--- a/src/core/spaces/locale/es_ES/LC_MESSAGES/django.po
+++ b/src/core/spaces/locale/es_ES/LC_MESSAGES/django.po
@@ -1,22 +1,22 @@
 # SOME DESCRIPTIVE TITLE.
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-#
+# 
 # Translators:
+# Oscar Carballal <oscar.carballal@cidadania.coop>, 2012.
 # Oscar Carballal <oscar@cidadania.coop>, 2012.
 msgid ""
 msgstr ""
 "Project-Id-Version: e-cidadania\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-05-21 17:48+0200\n"
-"PO-Revision-Date: 2012-02-29 08:52+0000\n"
-"Last-Translator: Oscar Carballal <oscar@cidadania.coop>\n"
-"Language-Team: Spanish (Spain) (http://www.transifex.net/projects/p/"
-"ecidadania/language/es_ES/)\n"
-"Language: es_ES\n"
+"Report-Msgid-Bugs-To: http://code.ecidadania.org/\n"
+"POT-Creation-Date: 2012-05-24 10:12+0200\n"
+"PO-Revision-Date: 2012-05-24 08:16+0000\n"
+"Last-Translator: Oscar Carballal <oscar.carballal@cidadania.coop>\n"
+"Language-Team: Spanish (Spain) (http://www.transifex.net/projects/p/ecidadania/language/es_ES/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: es_ES\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 
 #: admin.py:66
@@ -50,12 +50,11 @@ msgid "URL"
 msgstr "URL"
 
 #: models.py:57
-#, fuzzy
 msgid ""
-"Valid characters are lowercase, digits "
-"and                                          underscore. This will be the "
+"Valid characters are lowercase, digits and"
+"                                          underscore. This will be the "
 "accesible URL"
-msgstr "Todo en minúsculas. Esta será la dirección web."
+msgstr "Los caracteres válidos son minúsculas, dígitos y guiones bajos. Esta será la URL accesible."
 
 #: models.py:59 models.py:178 templates/spaces/event_add.html:138
 #: templates/spaces/space_add.html:224
@@ -76,7 +75,7 @@ msgstr "Creador del espacio"
 
 #: models.py:66 models.py:68
 msgid "Valid extensions are jpg, jpeg, png and gif"
-msgstr ""
+msgstr "Las extensiones válidas son jpg, jpeg, png, y gif"
 
 #: models.py:75
 msgid "Public space"
@@ -175,83 +174,83 @@ msgstr "Eventos"
 
 #: urls.py:39
 msgid "^(?P<space_name>\\w+)/rss/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/rss/$"
 
 #: urls.py:42 urls.py:98
 msgid "^(?P<space_name>\\w+)/news/"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/noticias/"
 
 #: urls.py:45
 msgid "^(?P<space_name>\\w+)/proposal/"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/propuestas/"
 
 #: urls.py:48
 msgid "^(?P<space_name>\\w+)/calendar/"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/calendario/"
 
 #: urls.py:51
 msgid "^(?P<space_name>\\w+)/debate/"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/debate/"
 
 #: urls.py:58
 msgid "^(?P<space_name>\\w+)/docs/add/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/docs/añadir/$"
 
 #: urls.py:60
 msgid "^(?P<space_name>\\w+)/docs/(?P<doc_id>\\d+)/edit/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/docs/(?P<doc_id>\\d+)/editar/$"
 
 #: urls.py:62
 msgid "^(?P<space_name>\\w+)/docs/(?P<doc_id>\\d+)/delete/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/docs/(?P<doc_id>\\d+)/eliminar/$"
 
 #: urls.py:64
 msgid "^(?P<space_name>\\w+)/docs/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/docs/$"
 
 #: urls.py:71
 msgid "^(?P<space_name>\\w+)/event/add/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/evento/añadir/$"
 
 #: urls.py:73
 msgid "^(?P<space_name>\\w+)/event/(?P<event_id>\\d+)/edit/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/evento/(?P<event_id>\\d+)/editar/$"
 
 #: urls.py:75
 msgid "^(?P<space_name>\\w+)/event/(?P<event_id>\\d+)/delete/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/evento/(?P<event_id>\\d+)/eliminar/$"
 
 #: urls.py:77
 msgid "^(?P<space_name>\\w+)/event/(?P<event_id>\\d+)/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/evento/(?P<event_id>\\d+)/$"
 
 #: urls.py:79
 msgid "^(?P<space_name>\\w+)/event/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/evento/$"
 
 #: urls.py:86
 msgid "^(?P<space_name>\\w+)/intent/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/intent/$"
 
 #: urls.py:87
 msgid "^(?P<space_name>\\w+)/intent/approve/(?P<token>\\w+)/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/intent/aprobar/(?P<token>\\w+)/$"
 
 #: urls.py:94
 msgid "^(?P<space_name>\\w+)/edit/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/editar/$"
 
 #: urls.py:96
 msgid "^(?P<space_name>\\w+)/delete/$"
-msgstr ""
+msgstr "^(?P<space_name>\\w+)/eliminar/$"
 
 #: urls.py:100
 msgid "^add/$"
-msgstr ""
+msgstr "^añadir/$"
 
 #: urls.py:104
 msgid "^go/"
-msgstr ""
+msgstr "^ir/"
 
 #: views.py:85
 #, python-format
@@ -265,66 +264,60 @@ msgstr "Toda la actividad reciente en %s"
 
 #: views.py:120
 msgid "Access has been already authorized"
-msgstr ""
+msgstr "El acceso ya ha sido autorizado"
 
 #: views.py:126
 msgid "New participation request"
-msgstr ""
+msgstr "Nueva petición de participación"
 
 #: views.py:127
 msgid ""
 "User {0} wants to participate in space {1}.\n"
 "                   Plese click on the link below to approve.\n"
 " {2}"
-msgstr ""
+msgstr "El usuario {0} quiere participar en el espacio {1}.\nPor favor, haz click en el siguiente enlace para aprobarlo.\n{2}"
 
 #: views.py:130
 msgid "Your request is being processed."
-msgstr ""
+msgstr "Tu petición está siendo procesada."
 
 #: views.py:144
 msgid "The requested intent does not exist!"
-msgstr ""
+msgstr "¡El intent que buscas no existe!"
 
 #: views.py:153
 #, python-format
 msgid "The user has been authorized to participate in space \"%s\"."
-msgstr ""
+msgstr "El usuario ha sido autorizado a participar en el espacio \"%s\"."
 
 #: views.py:154
 msgid "Autorization succesful"
-msgstr ""
+msgstr "Autorización satisfactoria"
 
 #: views.py:237
 msgid ""
-"Hello anonymous user. Remember                                               "
-"that this space is public to view, "
-"but                                               you must <a href=\"/"
-"accounts/register\">register</"
-"a>                                               or <a href=\"/accounts/login"
-"\">login</a> to participate."
-msgstr ""
-"Hola, usuario anónimo. Recuerda que este espacio es público para ver, pero "
-"debes <a href=\"/accounts/register\">registrarte</a> o <a href=\"/accounts/"
-"login\">entrar</a> para participar."
+"Hello anonymous user. Remember"
+"                                               that this space is public to "
+"view, but                                               you must <a "
+"href=\"/accounts/register\">register</a>"
+"                                               or <a "
+"href=\"/accounts/login\">login</a> to participate."
+msgstr "Hola, usuario anónimo. Recuerda que este espacio es público para ver, pero debes <a href=\"/accounts/register\">registrarte</a> o <a href=\"/accounts/login\">entrar</a> para participar."
 
 #: views.py:244
 msgid ""
-"You're an anonymous user.                           You must <a href=\"/"
-"accounts/register\">register</a>                           or <a href=\"/"
-"accounts/login\">login</a> to access here."
-msgstr ""
-"Eres un usuario anónimo. Debes <a href=\"/accounts/register\">registrarte</"
-"a> o <a href=\"/accounts/login\">entrar</a> para acceder aquí."
+"You're an anonymous user.                           You must <a "
+"href=\"/accounts/register\">register</a>                           or <a "
+"href=\"/accounts/login\">login</a> to access here."
+msgstr "Eres un usuario anónimo. Debes <a href=\"/accounts/register\">registrarte</a> o <a href=\"/accounts/login\">entrar</a> para acceder aquí."
 
 #: views.py:254
 msgid "You're not registered to this space."
 msgstr "No estás registrado en este espacio."
 
 #: views.py:313
-#, fuzzy
 msgid "Space edited successfully"
-msgstr "Documento editado satisfactoriamente."
+msgstr ""
 
 #: templates/spaces/document_add.html:4 templates/spaces/document_add.html:16
 msgid "Upload new document"
@@ -373,9 +366,7 @@ msgstr "Eliminar documento"
 #: templates/spaces/document_confirm_delete.html:19
 msgid ""
 "Are you sure you want to delete this document? This action cannot be undone"
-msgstr ""
-"¿Estás seguro de querer eliminar este documento? Esta acción no se puede "
-"deshacer"
+msgstr "¿Estás seguro de querer eliminar este documento? Esta acción no se puede deshacer"
 
 #: templates/spaces/document_confirm_delete.html:23
 #: templates/spaces/event_confirm_delete.html:23
@@ -479,9 +470,7 @@ msgstr "Eliminar evento"
 #: templates/spaces/event_confirm_delete.html:19
 msgid ""
 "Are you sure you want to delete this event? This action cannot be undone"
-msgstr ""
-"¿Estás seguro de querer eliminar este evento? Esta acción no se puede "
-"deshacer"
+msgstr "¿Estás seguro de querer eliminar este evento? Esta acción no se puede deshacer"
 
 #: templates/spaces/event_detail.html:4 templates/spaces/event_detail.html:16
 msgid "View event"
@@ -531,17 +520,13 @@ msgstr "Nombre del espacio"
 msgid ""
 "The name of the space. Have in mind that this name will be used as the URL "
 "of your space. We recommend to use all lowercase. (100 chars)"
-msgstr ""
-"El nombre del espacio. Ten en cuenta que el nombre se usará como URL de tu "
-"espacio. Recomendamos que uses todo minúsculas .(100 caracteres)"
+msgstr "El nombre del espacio. Ten en cuenta que el nombre se usará como URL de tu espacio. Recomendamos que uses todo minúsculas .(100 caracteres)"
 
 #: templates/spaces/space_add.html:224
-#, fuzzy
 msgid ""
-"An optional description for your space. This is publicly visible to everyone."
-msgstr ""
-"Una descripción opcional para tu espacio. No se mostrará a los usuarios, "
-"pero sí a los administradores."
+"An optional description for your space. This is publicly visible to "
+"everyone."
+msgstr "Una descripción opcional para tu espacio. Esto será visible para todo el mundo."
 
 #: templates/spaces/space_add.html:225
 msgid "Logotype"
@@ -569,10 +554,9 @@ msgstr "Esto configurará los usuarios que pueden acceder a tu espacio."
 
 #: templates/spaces/space_add.html:228
 msgid ""
-"Select the modules you will use in your space. This can be edited afterwards."
-msgstr ""
-"Selecciona los módulos que quieres utilizar en tu espacio. Esto se puede "
-"editar más tarde."
+"Select the modules you will use in your space. This can be edited "
+"afterwards."
+msgstr "Selecciona los módulos que quieres utilizar en tu espacio. Esto se puede editar más tarde."
 
 #: templates/spaces/space_confirm_delete.html:4
 #: templates/spaces/space_confirm_delete.html:17
@@ -583,9 +567,7 @@ msgstr "Eliminar espacio"
 #: templates/spaces/space_confirm_delete.html:18
 msgid ""
 "Are you sure you want to delete this space? This action cannot be undone"
-msgstr ""
-"¿Estás seguro de querer eliminar este espacio? Esta acción no se puede "
-"deshacer"
+msgstr "¿Estás seguro de querer eliminar este espacio? Esta acción no se puede deshacer"
 
 #: templates/spaces/space_edit.html:5 templates/spaces/space_edit.html:13
 #: templates/spaces/space_index.html:44
@@ -625,7 +607,7 @@ msgstr "Estado actual:"
 
 #: templates/spaces/space_index.html:63
 msgid "Participants:"
-msgstr ""
+msgstr "Participantes"
 
 #: templates/spaces/space_index.html:65
 msgid "Recent activity"
@@ -670,9 +652,8 @@ msgid "Next events"
 msgstr "Próximos eventos"
 
 #: templates/spaces/space_index.html:117
-#, fuzzy
 msgid "There are no events."
-msgstr "No hay eventos en este espacio"
+msgstr "No hay eventos."
 
 #: templates/spaces/space_index.html:133
 msgid "Edit"
@@ -715,9 +696,8 @@ msgid "Closed debates"
 msgstr "Debates cerrados"
 
 #: templates/spaces/space_index.html:193
-#, fuzzy
 msgid "No debates closed yet."
-msgstr "No hay debates empezados."
+msgstr "No hay debates cerrados aún."
 
 #: templates/spaces/space_index.html:202
 msgid "Add"
@@ -794,12 +774,3 @@ msgstr "Lista de espacios"
 #: templates/spaces/space_list.html:18
 msgid "There are no public spaces or spaces you are registered to"
 msgstr "No hay espacios públicos o espacios en los que estés registrado."
-
-#~ msgid "Users:"
-#~ msgstr "Usuarios:"
-
-#~ msgid "100x75 pixels"
-#~ msgstr "100x75 píxeles"
-
-#~ msgid "75px height"
-#~ msgstr "75px de alto"
